--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="col-wide">
       <h1>Kenyatta Wainaina</h1>
       <h2>Student </h2>
-      <p>I’m a Junior CIS major at James Madison University that has experience
+      <p>I’m a Senior SMAD and CIS major at James Madison University that has experience
         building a program using Python, making databases, queries, and reports
         using Microsoft Office programs such as Access, Excel, PowerPoint, and
         Word, and process flowchart diagramming using UML. Currently learning
@@ -124,9 +124,10 @@
        <h3>James Madisons University, 2020 - Present</h3>
        <h4>Activities and Societies : </h4>
        <ul>
-         <li>Alpha Sigma Phi Social Media Chair </li>
-         <li>Chess Club</li>
-         <li>Gymnastics Club</li>
+         <li>Alpha Sigma Phi Social Media Chair, 2021 - Present </li>
+         <li>Alpha Sigma Phi Diversity and Inclusion Officer, 2022 - Present </li>
+         <li>Chess Club, 2020-2022</li>
+         <li>Gymnastics Club 2020-2021</li>
        </ul>
      </div>
 
