--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
        <h3>James Madisons University, 2020 - Present</h3>
        <h4>Activities and Societies : </h4>
        <ul>
-         <li>Alpha Sigma Phi Social Media Chair, 2021 - Present </li>
-         <li>Alpha Sigma Phi Diversity and Inclusion Officer, 2022 - Present </li>
-         <li>Chess Club, 2020-2022</li>
-         <li>Gymnastics Club 2020-2021</li>
+         <li>Alpha Sigma Phi Social Media Chair</li>
+         <li>Alpha Sigma Phi Diversity and Inclusion Officer</li>
+         <li>Chess Club</li>
+         <li>Gymnastics Club</li>
        </ul>
      </div>
 
