--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
       <div class="col-narrow">
           <!-- // Job Details  -->
-          <h3>Robot Operator</h3>
+          <h3>Robot Engineer</h3>
           <p>Starship Technologies</p>
           <p>Feb 2021 - Present</p>
 
